--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
         <engine name="cordova" version=">=3.0.0" />
     </engines>
 
-    <dependency id="cordova-plugin-file" version=">=5.0.0" />
+    <dependency id="cordova-plugin-file" version=">=6.0.2-OS5" />
 
     <js-module src="www/cordovaHTTP.js" name="CordovaHttpPlugin">
         <clobbers target="CordovaHttpPlugin" />
